# taurus_ws

./: .gitignore
src/hw_t/: CMakeLists.txt  fcp_plugin.xml  global_planner_plug.xml  map.pgm  map.yaml  package.xml  script
src/hw_t/action/: aruco_detect.action
src/hw_t/calib_data/: MultiMatrix.npz
src/hw_t/config/: base_global_planner.yaml  controller.yaml  controller2.yaml  costmap_common_param.yaml  dual_ekf_navsat_example.yaml  dwa_local_planner_param.yaml  dwb_local_planner_params.yaml  ekf2.yaml  ekf3.yaml  ekf4.yaml  global_costmap_param.yaml  joint_limits.yaml  local_costmap_param.yaml  mapping.lua  move_base2.yaml  move_base_param.yaml  rviz_nav3.rviz  sbpl_planner_param.yaml  ukf.yaml
src/hw_t/goals/: goal_1.txt  goal_10.txt  goal_11.txt  goal_12.txt  goal_13.txt  goal_14.txt  goal_15.txt  goal_16.txt  goal_2.txt  goal_20.txt  goal_21.txt  goal_22.txt  goal_23.txt  goal_3.txt  goal_30.txt  goal_31.txt  goal_4.txt  goal_5.txt  goal_55.txt  goal_56.txt  goal_57.txt  goal_6.txt  goal_8.txt  goal_80.txt  goal_81.txt  goal_85.txt  goal_86.txt  initialpose).txt
src/hw_t/launch/: .hardware.launch.swp  amcl.launch  amcl2.launch  amcl3.launch  autodockk.launch  camera.launch  (+25 more)
src/robot_control/: CMakeLists.txt  package.xml
src/robot_control/action/: RobotControl.action  distance.action
src/robot_control/msg/: ControlCommand.msg
src/robot_control/scripts/: Check_Status.js  actionclient.py  car_cobat_redis.js  component_scan.py  reed.py  robot_control_client.js  robot_control_server.js  scan2.py  scanComponent_server.py  task.js  updated_values.js
(+164 files in other folders)
